--- a/platformer/.godot/editor/editor_layout.cfg
+++ b/platformer/.godot/editor/editor_layout.cfg
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/bullet.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/player.gd"
+selected_script="res://Scripts/bullet.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
