--- a/platformer/.godot/editor/editor_layout.cfg
+++ b/platformer/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/player.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/move_scene.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,17 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn")
-current_scene="res://scenes/main.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://MoveScene.tscn", "res://scenes/move_menu.tscn")
+current_scene="res://scenes/move_menu.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/bullet.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/player.gd"
+open_scripts=["res://Scripts/bullet.gd", "res://Scripts/move_scene.gd", "res://scenes/popup_menu.gd"]
+selected_script="res://scenes/popup_menu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
