--- a/platformer/.godot/editor/editor_layout.cfg
+++ b/platformer/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -26,17 +26,18 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/main.tscn", "res://MoveScene.tscn", "res://scenes/move_menu.tscn")
-current_scene="res://scenes/move_menu.tscn"
+current_scene="res://MoveScene.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/bullet.gd", "res://Scripts/move_scene.gd", "res://scenes/popup_menu.gd"]
-selected_script="res://scenes/popup_menu.gd"
+open_scripts=["res://Scripts/bullet.gd", "res://Scripts/move_menu.gd", "res://Scripts/move_scene.gd", "res://scenes/popup_menu.gd"]
+selected_script="res://Scripts/move_menu.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
 
