--- a/platformer/.godot/editor/editor_layout.cfg
+++ b/platformer/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://sprites/PlayerOverhead1.png")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://Scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,11 +25,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/player.tscn"
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/tile_map.tscn")
+current_scene="res://scenes/tile_map.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
@@ -39,9 +40,6 @@ open_help=["CompressedTexture2D"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
-window_rect=Rect2i(366, 213, 1356, 664)
-window_screen=0
-window_screen_rect=Rect2i(0, 0, 1920, 1032)
 
 [ShaderEditor]
 
