--- a/platformer/.godot/editor/script_editor_cache.cfg
+++ b/platformer/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,30 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 18,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
 [res://Scripts/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 11.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/enemy.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
