--- a/platformer/.godot/editor/editor_layout.cfg
+++ b/platformer/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -25,16 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/move_menu.tscn", "res://scenes/MoveScene.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/main.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/move_menu.tscn", "res://scenes/player.tscn", "res://scenes/main_menu.tscn")
+current_scene="res://scenes/main_menu.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/bullet.gd", "res://Scripts/enemy.gd", "res://Scripts/move_scene.gd", "res://Scripts/player.gd"]
+open_scripts=["res://Scripts/bullet.gd", "res://Scripts/enemy.gd", "res://scenes/main_menu.gd", "res://Scripts/move_scene.gd", "res://Scripts/player.gd"]
 selected_script="res://Scripts/move_scene.gd"
 open_help=["CompressedTexture2D"]
 script_split_offset=70
